# finance-manager-ecosystem

./: .cursorignore  .env.example  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  antigravity_cli.readme  business_notes.txt  docker-compose.bluegreen.cutover.yml  docker-compose.bluegreen.parallel.yml  docker-compose.bluegreen.yml  docker-compose.yml  fix_models.py  fix_state.py  notes.txt  slack_agent_infra.md  test_api.py  test_httpx.py  test_mappers.py  test_pydantic.py
.claude/: settings.json
.cursor/: mcp.json  settings.json
.github/: CODEOWNERS  pull_request_template.md
agentic/: build_manifest.py  manifest.json
deploy/: BLUEGREEN_SWITCHOVER.md  CPPR_AND_CPPRD.md  DEPLOYMENT_VECTORS.md  SERVER_BETA_INSTALL.md  server.env.example
docs/: DEPENDENCY_LOCKFILES.md  SPDX_COMPLIANCE.md  agent-delegation-pilot.md
finance_manager/: settings.py
finance_manager_rust_middleware/: .gitignore  README.md
finance_manager_rust_tools/: README.md
governance/: Beta_Week_Incident_Triage_and_Human_Gated_Autofix_Contract.md  Documentation_Sync_Protocol.md  Git_Owner_Handoff_Template.md  HITM_SCHEDULE_AND_TASKS.md  Inter_Agent_Message_Relay_and_Ownership_Contract.md  README.md  Runtime_Owner_Handoff_Template.md  Runtime_Signup_Sheet.md  Server_Runtime_Agent_Operations_Contract.md  agent_workspace_isolation.md  branching_guidelines.md  cursor_pa_slack_visibility.md  definition_of_done.md  deployment_protocol.md  (+15 more)
scripts/mcp/: README.md  pyproject.toml  run.sh
scripts/mcp/hfm_mcp/: __init__.py  runner.py  server.py
(+960 files in other folders)
