[project]
name = "hfm-mcp"
version = "0.1.0"
description = "Local MCP server wrapping HFM scripts/ for Cursor and Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6,<2",
]

[project.scripts]
hfm-mcp = "hfm_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hfm_mcp"]
